# tg-order-radar

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  secret-guard.yml
app/: __init__.py  main.py
app/api/: auth.py  favorites.py  health.py  keywords.py  metrics.py  orders.py  sources.py  stats.py  subscriptions.py
app/bot/: __init__.py  cards.py  handlers.py  main.py  services.py
app/classification/: __init__.py  ml.py  rules.py  training.py
app/collector/: __init__.py  accounts.py  leases.py  messages.py  rate_limit.py  telethon_client.py
app/core/: config.py  correlation.py  errors.py  logging.py
app/db/: __init__.py  health.py  session.py
app/models/: __init__.py  entities.py
app/monitoring/: __init__.py  metrics.py  sentry.py
app/processing/: __init__.py  extractors.py  keywords.py  language.py  normalization.py  (+1 more)
docs/: production-deployment.md  tg-order-radar-cursor-roadmap.md  tg-order-radar-spec.md  troubleshooting.md  vps-hardening.md
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
migrations/: env.py
monitoring/: alerts.yml  prometheus.yml
scripts/: auth_telegram.py  backup_postgres.sh  deploy.sh  ml_classifier.py  restore_postgres.sh  rollback.sh  seed_keywords.py  semantic_dedup.py  test_backup_restore.py  test_backup_restore.sh  validate_shell_scripts.sh
(+95 files in other folders)
