[project]
name = "tg-order-radar"
version = "0.1.0"
description = "Service for finding website development orders in public Telegram sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic-settings",
    "redis",
    "structlog",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_decorators = false
warn_unreachable = true
pretty = true
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
